fix page having overflow-x when page has overflow-y

--- a/frontend/static/css/main.css
+++ b/frontend/static/css/main.css
@@ -217,8 +217,6 @@ main {
 body > header {
 	display: grid;
 
-	width: 100vw;
-
 	grid-template-columns: auto 1fr auto auto;
 	grid-template-rows: auto;
 	grid-template-areas: "logo search button profile";
